--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,9 @@
 {
-  "manifest_version": 3,
-  "name": "Reader Line",
   "version": "1.0.0",
-  "description": "A basic example extension with only required keys",
+  "manifest_version": 3,
+  "name": "__MSG_appName__",
+  "description": "__MSG_shortDesc__",
+  "default_locale": "en",
   "action": {
     "default_popup": "index.html"
   },
